# Inventree

./: .gitignore  Cargo.toml  LICENSE  LICENSE-BSD-2-CLAUSE  README.md  package.json  tailwind.config.js
markups/: backend.md  frontend.md  utils.md
src/common/: Cargo.toml
src/common/src/: lib.rs
src/frontend/: Cargo.toml  index.html
src/frontend/Admin-Template-master/: index.html
src/frontend/assets/static/: blog.html  license.html
src/frontend/css/: style.css
src/frontend/src/: app.rs  lib.rs  main.rs
src/frontend/src/components/: mod.rs
src/frontend/src/components/auth/: mod.rs
src/frontend/src/components/cards/: mod.rs
src/frontend/src/components/footer/: mod.rs
src/frontend/src/components/navbar/: mod.rs
src/frontend/src/components/navbar/dashboard/: mod.rs
src/frontend/src/components/navbar/website/: mod.rs
src/frontend/src/components/sidebar/: mod.rs
src/frontend/src/components/table/: mod.rs
src/frontend/src/layout/: mod.rs
src/frontend/src/layout/dashboard/: mod.rs
src/frontend/src/layout/website/: mod.rs
src/frontend/src/pages/auth/: mod.rs
src/frontend/src/pages/auth/form/: mod.rs
src/frontend/src/pages/auth/form/login_form/: button.rs  input.rs  mod.rs
src/frontend/src/pages/auth/form/signup_form/: button.rs  input.rs  mod.rs
src/frontend/src/pages/auth/login/: mod.rs
src/frontend/src/pages/auth/signup/: mod.rs
src/frontend/src/pages/dashboard/: mod.rs
src/frontend/src/pages/home/: mod.rs
src/frontend/src/pages/not_found/: mod.rs
src/frontend/src/utils/: api.rs
src/mongodb/: Cargo.toml
src/mongodb/src/: user.rs
src/server/: Cargo.toml
src/server/src/: lib.rs  main.rs
src/server/src/routes/products/: create.rs  delete.rs  read.rs
src/server/src/routes/user/: create.rs
src/utils/auth/: Cargo.toml
src/utils/auth/src/: jwt.rs  lib.rs
src/utils/env/: Cargo.toml
src/utils/env/src/: lib.rs
src/utils/security/: Cargo.toml
