[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.2"
yew-router = "0.17"
envy = "0.4"
gloo-console = "0.2.3"
reqwest = "0.11.16"
chrono = "0.4.24"
wasm-bindgen = "0.2.67"
# custom allocator
wee_alloc = "0.4.2"

# User crates
common = { path = "../common" }
security = { path = "../utils/security" }


