[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
# setting lto to "thin" will result in slower compiler time
# but increased performance of the executable.
# So doing a tradeoff for server worth doing
lto = "thin"

[dependencies]
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
mongodb = { path = "../mongodb" }

# user defined crates
common = { path = "../common" }
auth = { path = "../utils/auth" }
security = { path = "../utils/security" }
