[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
# setting lto to "thin" will result in slower compiler time
# but increased performance of the executable.
# So doing a tradeoff for server worth doing
lto = "thin"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["full"] }

# user defined crates
common = { path = "../common" }
mongodb = { path = "../mongodb" }
auth = { path = "../utils/auth" }
env = { path = "../utils/env" }

